[package]
name = "ogc-tools"
version = "0.1.0"
authors = ["Alex <grampz@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogc = { path = "../ogc" }
clap = "3.0.0-beta.1"
tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }
tokio = { version = "0.2.21", features = ["full"] }
crossterm = "0.17.5"
reqwest = "0.10.6"
proptest = "0.10.0"
