[package]
name = "ogc-tools"
version = "0.1.0"
authors = ["Alex <grampz@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogc = { path = "../ogc" }
clap = "3.0.0-beta.1"
tokio = { version = "0.2.21", features = ["full"] }
reqwest = "0.10.6"
prettytable-rs = "0.8.0"
anyhow = "1.0.31"
colored = "1.9.3"
epsg = "0.2.0"
