[package]
authors = ["Alex Collins <grampz@pm.me>"]
description = "Tools for working with OGC data and services"
edition = "2018"
homepage = "https://github.com/atcol/ogc"
keywords = ["ogc", "geo", "map"]
license = "MIT"
name = "ogc-tools"
readme = "../README.md"
repository = "https://github.com/atcol/ogc"
version = "0.3.0"

[[bin]]
name = "wms"
path = "src/wms.rs"

[dependencies]
ogc = { path = "../ogc", version= "0.6.0" }
clap = "3.0.0-beta.2"
tokio = { version = "0.2.22", features = ["full"] }
reqwest = "0.10.8"
prettytable-rs = "0.8.0"
anyhow = "1.0.33"
colored = "2.0.0"
epsg = "0.4.0"
shapefile = { version = "0.2.1", features = ["geo-types"] }
serde_json = "1.0.59"
geo-types = "0.6.1"
geojson = { version = "0.20.1", features = ["geo-types"] }
proj = { version = "0.20.5", features = ["network"] }
strum_macros = "0.19.4"
strum = "0.19.5"

