[package]
authors = ["Alex Collins <grampz@pm.me>"]
description = "Types for Open Geospatial Consortium (OGC) technologies"
edition = "2018"
homepage = "https://github.com/atcol/ogc"
keywords = ["ogc", "geo", "map"]
license = "MIT"
name = "ogc-types"
readme = "../README.md"
repository = "https://github.com/atcol/ogc"
version = "0.1.0"

[dependencies]
serde = "1.0.117"
serde-xml-rs = "0.4.0"
serde_derive = "1.0.117"