[package]
authors = ["Alex Collins <grampz@pm.me>"]
description = "Models, APIs and Tools for working with Open Geospatial Consortium (OGC) technologies"
edition = "2018"
homepage = "https://github.com/atcol/ogc"
keywords = ["ogc", "geo", "map"]
license = "MIT"
name = "ogc"
readme = "../README.md"
repository = "https://github.com/atcol/ogc"
version = "0.6.0"

[dependencies]
async-trait = "0.1.41"
serde_json = "1.0.59"
anyhow = "1.0.33"
serde = "1.0.117"
serde-xml-rs = "0.4.0"
serde_derive = "1.0.117"
reqwest = "0.11.*"
tokio = { version = "0.2.22", features = ["full"] }
url = "2.1.1"
epsg = "0.4.0"
bytes = "0.5.6"
