[package]
authors = ["Alex Collins <grampz@pm.me>"]
description = "Models, APIs and Tools for working with Open Geospatial Consortium (OGC) technologies"
edition = "2018"
homepage = "https://github.com/atcol/ogc"
keywords = ["ogc", "geo", "map"]
license = "MIT"
name = "ogc"
readme = "../README.md"
repository = "https://github.com/atcol/ogc"
version = "0.6.0"

[dependencies]
async-trait = "0.1.41"
serde_json = "1.0.59"
anyhow = "1.0.33"
serde = "1.0.117"
serde-xml-rs = "0.4.0"
serde_derive = "1.0.117"
reqwest = "0.11.*"
url = "2.1.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen-futures = "*"
js-sys = "0.3.45"
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch="wasm32")'.dependencies.web-sys]
version = "0.3.25"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "FormData",
    "Blob",
    "BlobPropertyBag",
    "ServiceWorkerGlobalScope",
]

[dev-dependencies]
tokio = { version = "1.1.1", features = ["full"] }