[package]
authors = ["Alex Collins <grampz@pm.me>"]
description = "Models, APIs and Tools for working with Open Geospatial Consortium (OGC) technologies"
edition = "2018"
homepage = "https://github.com/atcol/ogc"
keywords = ["ogc", "geo", "map"]
license = "MIT"
name = "ogc"
readme = "../README.md"
repository = "https://github.com/atcol/ogc"
version = "0.6.0"

[dependencies]
anyhow = "1.0.33"
async-trait = "0.1.41"
js-sys = "0.3.45"
nom = "*"
reqwest = "0.11.*"
serde = "1.0.117"
serde-xml-rs = "0.4.1"
serde_derive = "1.0.117"
serde_json = "1.0.59"
url = "2.1.1"
wasm-bindgen-futures = "*"
wasm-bindgen-test = "0.3"
wasm-bindgen = {version = "0.2.68", features = ["serde-serialize"]}

[dev-dependencies.proptest]
version = "0.10.1"
default-features = false
features = ["std"]

[dev-dependencies.tokio]
features = ["full"]
version = "1.1.1"

[target."cfg(target_arch=\"wasm32\")".dependencies.web-sys]
features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "FormData", "Blob", "BlobPropertyBag", "ServiceWorkerGlobalScope"]
version = "0.3.25"
